--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <header>
     <h1>Angular Weather</h1>
 </header>
-<app-weather-search></app-weather-search>
-<app-weather-list></app-weather-list>
+
+<body style="background-color:  linear-gradient(to bottom,#372865,#000)">
+    <app-weather-search></app-weather-search>
+    <app-weather-list></app-weather-list>
+</body>
