--- a/src/app/weather/weather-item/weather-item.component.html
+++ b/src/app/weather/weather-item/weather-item.component.html
@@ -1,4 +1,4 @@
-<article class="weather-element">
+<!-- <article class="weather-element">
   <div class="col-1">
     <h3>{{ weatherItem.cityName }}</h3>
     <p class="info">{{ weatherItem.description }}</p>
@@ -6,4 +6,24 @@
   <div class="col-2">
     <span class="temperature">{{ weatherItem.temperature }}°C</span>
   </div>
+</article> -->
+
+<article class="weather-element">
+
+  <div *ngIf="data.isDay" class="weatherWidgetRow">
+    <i class="fas fa-3x fa-sun sun"></i>
+  </div>
+  <div *ngIf="!data.isDay" class="weatherWidgetRow">
+    <i class="fas fa-3x fa-moon moon"></i>
+  </div>
+  <div class="weatherWidgetRow cloudDiv">
+    <i class="fas fa-cloud fa-3x cloud"></i>
+  </div>
+  <div class="weatherWidgetRow" style="font-size: 32px;margin-top: 5px;">{{weatherItem.temperature}}°</div>
+  <div class="weatherWidgetRow" style="font-size: 14px;">{{weatherItem.description}}</div>
+  <div class="weatherWidgetRow" style="font-size: 12px;">{{weatherItem.temp_min}}° / {{weatherItem.temp_max}}°</div>
+  <div class="weatherWidgetRow" style="font-size: 12px;">Feels Like: {{weatherItem.temp_feels_like}}°</div>
+  <div class="weatherWidgetRow" style="font-size: 30px;margin-top: 15px;text-align: center;">{{weatherItem.cityName}}
+  </div>
+  <div class="weatherWidgetRow" style="font-size: 12px;">Humidity: {{weatherItem.humidity}}%</div>
 </article>
