--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,31 @@
-header {
-  background-color: rgb(8, 10, 63);
+// * {
+//   // background-color:  linear-gradient(to bottom,#372865,#000);
+//   background-color: black;
+// }
+
+h1 {
+  background-color: rgb(0, 2, 61);
   padding: 30px;
+  margin-top: 0px;
   width: 100%;
   color: white;
   text-align: center;
-  font-size: 30px;
+  font-size: 40px;
   color: #f1c40f;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  // margin-bottom: -20px;
 
 }
 
-body {
-  background-color:  linear-gradient(to bottom,#372865,#000);
-}
+// html {
+//    margin: 0px;
+//    height: 100%;
+//    width: 100%;
+// }
+
+// body {
+//    margin: 0px;
+//    min-height: 100%;
+//    width: 100%;
+//    background: linear-gradient(to bottom, rgb(32, 32, 109), black);
+// }
