--- a/src/app/weather/weather-item/weather-item.component.html
+++ b/src/app/weather/weather-item/weather-item.component.html
@@ -19,11 +19,11 @@
   <div class="weatherWidgetRow cloudDiv">
     <i class="fas fa-cloud fa-3x cloud"></i>
   </div>
-  <div class="weatherWidgetRow" style="font-size: 32px;margin-top: 5px;">{{weatherItem.temperature}}°</div>
-  <div class="weatherWidgetRow" style="font-size: 14px;">{{weatherItem.description}}</div>
-  <div class="weatherWidgetRow" style="font-size: 12px;">{{weatherItem.temp_min}}° / {{weatherItem.temp_max}}°</div>
-  <div class="weatherWidgetRow" style="font-size: 12px;">Feels Like: {{weatherItem.temp_feels_like}}°</div>
-  <div class="weatherWidgetRow" style="font-size: 30px;margin-top: 15px;text-align: center;">{{weatherItem.cityName}}
+  <div class="weatherWidgetRow" style="font-size: 38px;margin-top: 5px;">{{weatherItem.temperature}}°</div>
+  <div class="weatherWidgetRow" style="font-size: 22px; margin-bottom: 12px;">{{weatherItem.description}}</div>
+  <div class="weatherWidgetRow" style="font-size: 18px;">{{weatherItem.temp_min}}° / {{weatherItem.temp_max}}°</div>
+  <div class="weatherWidgetRow" style="font-size: 14px;">Feels Like: {{weatherItem.temp_feels_like}}°</div>
+  <div class="weatherWidgetRow" style="font-size: 44px;margin-top: 15px;text-align: center;">{{weatherItem.cityName}}
   </div>
-  <div class="weatherWidgetRow" style="font-size: 12px;">Humidity: {{weatherItem.humidity}}%</div>
+  <div class="weatherWidgetRow" style="font-size: 16px;">Humidity: {{weatherItem.humidity}}%</div>
 </article>
