--- a/src/app/weather/weather-item/weather-item.component.scss
+++ b/src/app/weather/weather-item/weather-item.component.scss
@@ -1,59 +1,21 @@
-// .col-1 {
-//   display: inline-block;
-//   width: 40%;
-// }
-
-// .col-1 h3 {
-//   margin: 0 0 10px 0;
-//   padding: 0;
-//   font-size: 22px;
-// }
-
-// .col-2 {
-//   display: inline-block;
-//   width: 50%;
-//   vertical-align: top;
-//   text-align: right;
-// }
 
 .temperature {
   font-size: 22px;
 }
 
 .weather-element {
-  // box-shadow: 1px 1px 6px #ccc;
-  // padding: 10px;
-  // margin: 10px 0;
-  // width: 200px;
-  // height: 300px;
-  
-
-    // display: grid;
-    // grid-template-columns: 1fr;
-    // grid-template-rows: 1fr 1fr 1fr;
-    // box-shadow: 0 0 2rem rgb(0 0 255 / 10%);
-    // justify-items: center;
-    // padding: 2rem;
-    // margin: 2rem;
-    // width: 19rem;
-    // height: 30rem;
-    // cursor: pointer;
-    // background-color: #fff;
-    // border-radius: 1.75rem;
-    // -webkit-animation: 1s ease-in-out slideup,1.25s ease-in-out fadein;
-    // animation: 1s ease-in-out slideup,1.25s ease-in-out fadein;
-
     box-shadow: 1px 1px 6px #ccc;
     margin-top: 40px;
     // margin-bottom: 50px;
     display: block;
     border-radius: 10px;
-    width: 200px;
-    height: 280px;
+    width: 280px;
+    height: 380px;
     background: rgb(0,0,0);
     background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgb(17, 15, 90) 75%, rgb(7, 11, 119) 100%);
     color: white;;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    cursor: pointer;
 }
 
 
