--- a/src/app/weather/weather-list/weather-list.component.html
+++ b/src/app/weather/weather-list/weather-list.component.html
@@ -1,3 +1,4 @@
-<section class="weather-list">
-  <app-weather-item *ngFor="let weatherItem of weatherItems" [item]="weatherItem"></app-weather-item>
+<section class="weather-list" [@weatherItems]="weatherItems">
+  <app-weather-item *ngFor="let weatherItem of weatherItems; let i = index" [item]="weatherItem"
+    (click)="deleteWeatherItem(i)"></app-weather-item>
 </section>
