--- a/src/app/weather/weather-search/weather-search.component.scss
+++ b/src/app/weather/weather-search/weather-search.component.scss
@@ -6,6 +6,7 @@
   label {
     font-weight: bold;
     margin-right: 20px;
+    color: white;
   }
 
   button, input {
@@ -21,8 +22,9 @@
   }
 
   button {
-    background-color: #2ecc71;
+    background-color: #f1c40f;
     border: none;
+    border-radius: 5px;
     padding: 4px 8px;
     box-shadow: 1px 1px 1px #95a5a6;
     cursor: pointer;
@@ -30,13 +32,18 @@
   }
 
   button:hover {
-    background-color: #27ae60;
+    background-color: #8eaf33;
   }
 }
 .result {
     margin-top: 1em;
 } 
 
+.info {
+  color: white
+}
+
 .info-cityname {
     font-weight: bold;
+    color: white;
 }
