--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+   margin: 0px;
+   width: 100%;
+   height: 100%;
+}
+
 body {
     padding: 0;
     margin: 0;
     font-family: "Roboto", Arial, sans-serif;
     font-size: 16px;
-  }
+    background: linear-gradient(to bottom, rgb(21, 29, 100) 35%, black);
+    background-repeat: no-repeat;   
+    background-attachment: fixed;
+    height: 100%;
+
+}
