--- a/src/app/weather/weather-item/weather-item.component.html
+++ b/src/app/weather/weather-item/weather-item.component.html
@@ -1,29 +1,40 @@
-<!-- <article class="weather-element">
-  <div class="col-1">
-    <h3>{{ weatherItem.cityName }}</h3>
-    <p class="info">{{ weatherItem.description }}</p>
-  </div>
-  <div class="col-2">
-    <span class="temperature">{{ weatherItem.temperature }}°C</span>
-  </div>
-</article> -->
-
 <article class="weather-element">
+  <div id="showDelete">
+    <i class="fas fa-3x fa-trash trash"></i>
+  </div>
 
-  <div *ngIf="data.isDay" class="weatherWidgetRow">
+  <div *ngIf="getDayNight()" class="weatherWidgetRow">
     <i class="fas fa-3x fa-sun sun"></i>
   </div>
-  <div *ngIf="!data.isDay" class="weatherWidgetRow">
+  <div *ngIf="!getDayNight()" class="weatherWidgetRow">
     <i class="fas fa-3x fa-moon moon"></i>
   </div>
   <div class="weatherWidgetRow cloudDiv">
     <i class="fas fa-cloud fa-3x cloud"></i>
   </div>
-  <div class="weatherWidgetRow" style="font-size: 38px;margin-top: 5px;">{{weatherItem.temperature}}°</div>
-  <div class="weatherWidgetRow" style="font-size: 22px; margin-bottom: 12px;">{{weatherItem.description}}</div>
-  <div class="weatherWidgetRow" style="font-size: 18px;">{{weatherItem.temp_min}}° / {{weatherItem.temp_max}}°</div>
-  <div class="weatherWidgetRow" style="font-size: 14px;">Feels Like: {{weatherItem.temp_feels_like}}°</div>
-  <div class="weatherWidgetRow" style="font-size: 44px;margin-top: 15px;text-align: center;">{{weatherItem.cityName}}
+  <div class="weatherWidgetRow" style="font-size: 40px;margin-top: 5px;">{{weatherItem.temperature}}°</div>
+  <div class="weatherWidgetRow" style="font-size: 22px;">{{weatherItem.description}}</div>
+  <div class="weatherWidgetRow" style="font-size: 12px; margin-bottom: 14px;">Feels Like:
+    {{weatherItem.temp_feels_like}}°</div>
+
+  <div class="weatherWidgetRow containerMaxMin" style="font-size: 24px;">
+    <div class="min-container">
+      <span><i class="fas fa-1x fa-sort-up" style="margin-bottom: -12px; color: greenyellow;"></i></span>
+      <span>{{weatherItem.temp_min}}</span>
+      <span style="color: greenyellow; font-size: 14px;">Min</span>
+    </div>
+    <div class="max-container">
+      <span><i class="fas fa-1x fa-sort-down" style="margin-bottom: -2px; color: red;"></i></span>
+      <span>{{weatherItem.temp_max}}</span>
+      <span style="color: red; font-size: 14px;">Max</span>
+    </div>
   </div>
-  <div class="weatherWidgetRow" style="font-size: 16px;">Humidity: {{weatherItem.humidity}}%</div>
+
+  <div class="weatherWidgetRow" style="font-size: 44px; margin-top: 16px;text-align: center;">{{weatherItem.cityName}}
+  </div>
+  <div class="weatherWidgetRow" style="font-size: 12px;">Humidity: {{weatherItem.humidity}}%</div>
+
 </article>
+<!-- <div>
+
+</div> -->
