--- a/src/app/weather/weather-item/weather-item.component.scss
+++ b/src/app/weather/weather-item/weather-item.component.scss
@@ -4,18 +4,45 @@
 }
 
 .weather-element {
+    position: relative;
     box-shadow: 1px 1px 6px #ccc;
     margin-top: 40px;
-    // margin-bottom: 50px;
     display: block;
     border-radius: 10px;
     width: 280px;
-    height: 380px;
+    height: 420px;
     background: rgb(0,0,0);
     background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgb(17, 15, 90) 75%, rgb(7, 11, 119) 100%);
     color: white;;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     cursor: pointer;
+}
+
+#showDelete {
+    position: absolute;
+    border-radius: 10px;
+    box-shadow: 1px 1px 6px #ccc;
+    display: none;
+    height: 420px;
+    width: 280px;
+    // background-color: rgb(39, 58, 122);
+    background-color: rgb(0, 0, 0);
+    // margin-top: 40px;
+}
+
+// .weather-element:hover {
+//     display: none;
+// }
+
+.weather-element:hover>#showDelete {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+}
+
+.weather-element:hover>.weatherWidgetRow {
+    opacity: 0.2;
 }
 
 
@@ -24,6 +51,28 @@
     margin:0 auto;
     width: fit-content;
 }
+
+.containerMaxMin {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+    -webkit-box-align: center;
+    align-items: center;
+
+}
+
+.containerMaxMin span {
+    text-align: center;
+}
+
+
+.min-container, .max-container {
+    margin: 0rem 3rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
 
 .sun{
     margin-top: 10px;
@@ -49,6 +98,11 @@
     animation-duration: 5s;
     animation-timing-function: ease-in-out;
     animation-direction: alternate;
+}
+
+.trash {
+    color: rgb(37, 37, 165);
+    margin: 10px;
 }
 
 @keyframes cloudMovement{
