--- a/src/app/weather/weather-list/weather-list.component.html
+++ b/src/app/weather/weather-list/weather-list.component.html
@@ -1,4 +1,4 @@
-<section class="weather-list" [@weatherItems]="weatherItems">
+<section class="weather-list" [@weatherItems]="weatherItems.length">
   <app-weather-item *ngFor="let weatherItem of weatherItems; let i = index" [item]="weatherItem"
     (click)="deleteWeatherItem(i)"></app-weather-item>
 </section>
