--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,9 @@
 //   // background-color:  linear-gradient(to bottom,#372865,#000);
 //   background-color: black;
 // }
+main {
+  height: 100%;
+}
 
 #title {
   position: relative;
@@ -25,11 +28,34 @@ mat-slide-toggle {
 
 .toggleChecked {
   color: rgb(67, 32, 223);
-  background-color: #ffffff;
+  background: linear-gradient(-45deg, #baf1ff, #00c9e4, #a2ecff, #5cdef0);
+  background-size: 400% 400%;
+  animation: gradient 4s ease infinite;
+  background-repeat: no-repeat;   
+  background-attachment: fixed;
 }
 .toggleUnChecked {
   color: #f1c40f;
-  // background-color: rgb(8, 9, 58);
+  background: linear-gradient(-45deg, rgb(24, 35, 134), #180f4e, #310070, #0d113a);
+  background-size: 400% 400%;
+  animation: gradient 4s ease infinite;
+  background-repeat: no-repeat;   
+  background-attachment: fixed;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 30%;
+    }
+    30% {
+        background-position: 30% 60%;
+    }
+    60% {
+        background-position: 60% 100%;
+    }
+    100% {
+        background-position: 0% 30%;
+    }
 }
 
 mat-slide-toggle-content {
@@ -50,15 +76,17 @@ mat-slide-toggle-content {
 .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
     background-color: #7500d4;
 }
-// html {
-//    margin: 0px;
-//    height: 100%;
-//    width: 100%;
-// }
 
-// body {
-//    margin: 0px;
-//    min-height: 100%;
-//    width: 100%;
-//    background: linear-gradient(to bottom, rgb(32, 32, 109), black);
-// }
+main {
+  padding: 0;
+    margin: 0;
+    font-family: "Roboto", Arial, sans-serif;
+    font-size: 16px;
+    // background: linear-gradient(to bottom, rgb(21, 29, 100) 35%, black, rgb(51, 51, 138), rgb(17, 17, 168));
+    background: linear-gradient(-45deg, rgb(24, 35, 134), #180f4e, #310070, #0d113a);
+    background-size: 400% 400%;
+    animation: gradient 4s ease infinite;
+    background-repeat: no-repeat;   
+    background-attachment: fixed;
+    height: 100%;
+}
