--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 html {
    margin: 0px;
+   padding: 0;
    width: 100%;
-   height: 100%;
+   height: 100%;  
+   display: table;
 }
+
+body {
+   padding: 0;
+   width: 100%;
+   display: table-cell;
+}
+
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
 
 // body {
 //     padding: 0;
@@ -81,5 +92,7 @@ html {
 //     transform:translateX(20%);
 //   }
 // }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+// html, body { height: 100%; }
+// body {
+//    height: auto;
+// }
