--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <main [ngClass]="autoRenew.value ? 'toggleChecked' : 'toggleUnChecked'">
-  <!-- <div style="display: flex;"> -->
   <h1 id="title" [ngClass]="autoRenew.value ? 'h1Light' : 'h1Dark'">
     Angular Weather
     <mat-slide-toggle [ngClass]="autoRenew.value ? 'h1Light' : 'h1Dark'" [checked]="autoRenew.value"
@@ -7,7 +6,6 @@
       {{autoRenew.value ? 'Light Mode' : 'Dark Mode'}}
     </mat-slide-toggle>
   </h1>
-  <!-- </div> -->
-  <app-weather-search></app-weather-search>
-  <app-weather-list></app-weather-list>
+  <app-weather-search [change]="checked"></app-weather-search>
+  <app-weather-list [change]="checked"></app-weather-list>
 </main>
