--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,9 +38,9 @@ mat-slide-toggle {
 
 .toggleChecked {
   color: rgb(67, 32, 223);
-  background: linear-gradient(-45deg, #6be5e9, #c4f3f3, #6ce9ff, #abf7fa);
+  background: linear-gradient(-45deg, #57dee2, #c1ffff, #49e4ff, #aaedf0);
   background-size: 400% 400%;
-  animation: gradient 3s ease infinite;
+  animation: gradient 2.5s ease infinite;
   background-repeat: no-repeat;   
   background-attachment: fixed;
 }
@@ -95,7 +95,7 @@ mat-slide-toggle-content {
     background-color: #ecde13;
 }
 .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
-    background-color: #a965e9;
+    background-color: #00e6f7;
 }
 
 .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
