--- a/src/app/weather/weather-item/weather-item.component.scss
+++ b/src/app/weather/weather-item/weather-item.component.scss
@@ -11,12 +11,41 @@
     border-radius: 10px;
     width: 280px;
     height: 420px;
-    background: rgb(0,0,0);
     background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgb(17, 15, 90) 75%, rgb(7, 11, 119) 100%);
     color: white;;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     cursor: pointer;
 }
+
+.weather-element-light {
+position: relative;
+    box-shadow: 1px 1px 6px #ccc;
+    margin-top: 40px;
+    display: block;
+    border-radius: 10px;
+    width: 280px;
+    height: 420px;
+    // background: rgb(255, 255, 255);
+    background: linear-gradient(180deg, rgb(255, 253, 253) 0%, rgb(156, 229, 252) 75%, rgb(136, 230, 247) 100%);
+    color: rgb(0, 0, 0);;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    cursor: pointer;
+}
+
+.weather-element-light .moon {
+    color: rgb(32, 77, 90);
+}
+.weather-element-light .sun {
+    color: rgb(219, 219, 33);
+}
+.weather-element-light .sort-up {
+    color: green;
+}
+.weather-element-light .text-sort-up {
+    color: green;
+}
+
+
 
 #showDelete {
     position: absolute;
@@ -76,7 +105,7 @@
 
 .sun{
     margin-top: 10px;
-    color: yellow;
+    color: rgb(255, 255, 0);
     filter: drop-shadow( 1px 1px 10px yellow);
 }
 
@@ -103,6 +132,16 @@
 .trash {
     color: rgb(37, 37, 165);
     margin: 10px;
+}
+
+.sort-up {
+    margin-bottom: -12px; 
+    color: greenyellow;
+}
+
+.text-sort-up {
+    color: greenyellow; 
+    font-size: 14px;
 }
 
 @keyframes cloudMovement{
