--- a/src/app/weather/weather-search/weather-search.component.scss
+++ b/src/app/weather/weather-search/weather-search.component.scss
@@ -42,6 +42,60 @@
     background-color: #8eaf33;
   }
 }
+
+.weather-search-light {
+  margin: 20px auto;
+  width: 40%;
+  text-align: center;
+
+  button, input {
+    font-size: inherit;
+    font-family: inherit;
+  }
+
+  input {
+    padding: 3px 5px;
+    outline: none;
+    width: 50%;
+    margin-right: 20px;
+    
+    font-family: inherit;
+  // width: 100%;
+  border: 0;
+  border-bottom: 2px solid white;
+  outline: 0;
+  font-size: 1.3rem;
+  color: black;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
+
+
+  }
+
+  button {
+    background-color: rgb(67, 32, 223);
+    border: none;
+    border-radius: 5px;
+    padding: 4px 8px;
+    box-shadow: 1px 1px 1px #95a5a6;
+    cursor: pointer;
+    color: white;
+  }
+
+  button:hover {
+    background-color: #8eaf33;
+  }
+}
+
+.weather-search-light .info {
+  color: black;
+}
+
+.weather-search-light .info-cityname {
+  color: black;
+}
+
 .result {
     margin-top: 1em;
 } 
