--- a/src/app/weather/weather-item/weather-item.component.scss
+++ b/src/app/weather/weather-item/weather-item.component.scss
@@ -19,7 +19,7 @@
 
 .weather-element-light {
 position: relative;
-    box-shadow: 1px 1px 12px rgb(0, 72, 94);
+    box-shadow: 1px 1px 12px rgb(2, 136, 177);
     margin-top: 40px;
     display: block;
     border-radius: 10px;
@@ -39,10 +39,10 @@ position: relative;
     color: rgb(219, 219, 33);
 }
 .weather-element-light .sort-up {
-    color: green;
+    color: rgb(3, 187, 3);
 }
 .weather-element-light .text-sort-up {
-    color: green;
+    color: rgb(3, 187, 3);
 }
 
 
